--- a/main.html
+++ b/main.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<table border="1">
+	<thead>
+		<tr>
+		 <td>Roll numbers</td>
+		 <td>Names</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+		<td>101</td>
+		<td>vipin</td>
+		</tr>
+		<tr>
+		<td>102</td>
+		<td>mayank</td>
+		</tr>
+	</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ul>
+	<li><img src="https://picsum.photos/id/123/200/300" alt="image"/></li>
+	<li><video controls>
+	 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"/>
+	</video>
+	</li>
+	<li>
+	<audio controls>
+	<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"/>
+	</audio>
+	</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
