--- a/main.html
+++ b/main.html
@@ -23,12 +23,16 @@
 		<td>102</td>
 		<td>mayank</td>
 		</tr>
+	   <tr>
+        <td>103</td>
+        <td>Charlie</td>
+      </tr>
 	</tbody>
 	</table>
-	<h1>List of medias</h1>
-	<ul>
+	<h2>List of medias</h2>
+	<ol>
 	<li><img src="https://picsum.photos/id/123/200/300" alt="image"/></li>
-	<li><video controls>
+	<li><video width="320" height="240" controls>
 	 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"/>
 	</video>
 	</li>
@@ -37,7 +41,7 @@
 	<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"/>
 	</audio>
 	</li>
-	</ul>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
