--- a/main.html
+++ b/main.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Semantic Table and Media</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<table border="1">
-	<thead>
-		<tr>
-		 <td>Roll numbers</td>
-		 <td>Names</td>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-		<td>101</td>
-		<td>vipin</td>
-		</tr>
-		<tr>
-		<td>102</td>
-		<td>mayank</td>
-		</tr>
-	   <tr>
+
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Roll numbers</th>
+        <th>Names</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101</td>
+        <td>Vipin</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Mayank</td>
+      </tr>
+      <tr>
         <td>103</td>
         <td>Charlie</td>
       </tr>
-	</tbody>
-	</table>
-	<h2>List of medias</h2>
-	<ol>
-	<li><img src="https://picsum.photos/id/123/200/300" alt="image"/></li>
-	<li><video width="320" height="240" controls>
-	 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"/>
-	</video>
-	</li>
-	<li>
-	<audio controls>
-	<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"/>
-	</audio>
-	</li>
-	</ol>
-    <script type="text/javascript" src="./script.js">
-</script>
+    </tbody>
+  </table>
+
+  <h2>List of medias</h2>
+
+  <ol>
+    <li>
+      <img src="https://picsum.photos/id/123/200/300" alt="image">
+    </li>
+    <li>
+      <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </li>
+    <li>
+      <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+        Your browser does not support the audio element.
+      </audio>
+    </li>
+  </ol>
+
+  <script src="./script.js"></script>
 
 </body>
-
 </html>
